# NewUkrainianInstagram

./: main.py  pyproject.toml  schemas.py
alembic/: env.py
alembic/versions/: 8cbb9b065502_initial_migration.py
src/conf/: config.ini  config.py
src/database/: db.py  models.py
src/routes/: images.py
src/services/: upload_img.py
templates/: index.html
