[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.96.0"
uvicorn = {extras = ["standart"], version = "^0.22.0"}
sqlalchemy = "^2.0.15"
pip = "^23.1.2"
install = "^1.3.5"
psycopg2 = "^2.9.6"
postgres = "^4.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
cloudinary = "^1.33.0"
pydantic = {extras = ["dotenv"], version = "^1.10.9"}
alembic = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
